tests/errors/struct.c
void printi(int c);
void printc(char c);
void prints(char * c);
int scani();

struct point{
    int x,y;
};

struct point3d;

int main(){
    struct point a;
    struct point *p;
    a.z=4;
    p.x=4;
    a->z=3;
    p->z=7;

}